--- a/index.html
+++ b/index.html
@@ -256,9 +256,7 @@
                   <li><span>+923182886682</span></li>
                   <li><span>jawad2206d@aptechgdn.net</span></li>
                 </ul>
-                <button class="btn btn-info"> <a
-                    href="https://www.canva.com/design/DAFZlpYQELs/9lFRXY4qH1BK42SlHm503Q/view?utm_content=DAFZlpYQELs&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink"
-                    attributes-list download></a> CV </button>
+                
 
               </div>
             </div>
@@ -343,7 +341,7 @@
   </div><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+      class="fa fa-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="bootstrap.bundle.min.js"></script>
